# aoc-2019

day_01/: Main.hs  MyLib.hs  MyLibTest.hs  README.md  day01.cabal
day_02/: Main.hs  MyLib.hs  MyLibTest.hs  README.md  day02.cabal
day_03/: .gitignore  Main.hs  MyLib.hs  MyLibTest.hs  README.md  day03.cabal
day_04/: Main.hs  README.md  day03.cabal
